Refine metabase setup, and Add Documentation